2006-04-20  Daiki Ueno  <ueno@unixuser.org>

	* mime-pgp.el (mime-view-application/pgp): Use epg-signature-to-string.
	(mime-verify-application/pgp-signature): Ditto.

2006-04-20  Daiki Ueno  <ueno@unixuser.org>

	* mime-pgp.el: Require 'epg.
	(mime-view-application/pgp): Use EasyPG.
	(mime-verify-application/pgp-signature): Ditto.
	(mime-add-application/pgp-keys): Ditto.

	* mime-edit.el: Require 'epa.
	(mime-edit-user-agent-value): Added EasyPG version number.
	(mime-edit-sign-pgp-mime): Use EasyPG.
	(mime-edit-encrypt-pgp-mime): Ditto.
	(mime-edit-sign-pgp-kazu): Ditto.
	(mime-edit-encrypt-pgp-kazu): Ditto.
	(mime-edit-insert-key): Ditto.
	(mime-edit-decode-multipart-in-buffer): Ditto.

2006-02-18  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* mime-edit.el (mime-edit-delete-trailing-whitespace): New
	Function for RFC3156.
	(mime-edit-sign-pgp-mime): Use it.

2003-12-18  Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el (pgg-gpg-process-region): Set environment variable
	LANGUAGE as well.  GNU gettext gives precedence to LANGUAGE over
	LC_ALL, when different language code is specified.  Thanks to
	Tatsuya Kinoshita <tats@vega.ocn.ne.jp>.
	[cf. <emacs-mime-ja:1599>]

2003-12-17  Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el (pgg-gpg-messages-locale): New user option.
	(pgg-gpg-process-region): Set environment variable LC_ALL when
	pgg-gpg-messages-locale is specified.

	* pgg-def.el (pgg-messages-locale): New user option.

	* mime-pgp.el (mime-verify-application/pgp-signature): Copy
	messages from pgg-errors-buffer.
	(mime-add-application/pgp-keys): Ditto.

2005-09-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-view.el (mime-view-insert-fontified-text-content): Disable
	support modes.

2005-06-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-view.el (mime-display-text/richtext): Withdraw the last
	change.
	(mime-display-text/enriched): Ditto.

2005-06-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-view.el (mime-display-text/richtext): Turn off